# old-code

./: README.md
Python/flat-flask-blog/: blog_app.py  blog_backend.py  config.py  config.yaml  install.py  requirements.txt  setup.py  wsgi.py
Python/flat-flask-blog/static/: style.css
Python/flat-flask-blog/templates/: admin_dashboard.html  admin_edit_post.html  atom.xml  edit_profile.html  index.html  page.html  post.html
Python/python-static-blog/: README.md  db.py  export.py
Python/python-static-blog/templates/: author.html  frame.html  home.html  post.html  post_preview.html  tag.html
c++/liber/: .gitignore  CMakeLists.txt  Doxyfile  README.md  liber-kate-syntax.xml
c++/liber/docs/: attributes.liber.template  manual.liber  style.liber
c++/liber/src/: allocator.cpp  allocator.h  attributes.yaml  baseclasses.cpp  baseclasses.h  blocks.cpp.template  blocks.h.template  blocks_code_generator.py  csscolorparser.cpp  csscolorparser.h  figure.cpp  figure.h  flowable.cpp  flowable.h  group.cpp  group.h  main.cpp  numbering.cpp  numbering.h  operation.cpp  operation.h  page.cpp  page.h  parser.cpp  parser.h  podofowriter.cpp  podofowriter.h  writer.cpp  writer.h
c++/qpan/: README.md  panel.pro
c++/qpan-applets/: README.md  panelapplets.pro
c++/qpan-applets/appmenu/: appmenu.cpp  appmenu.h  appmenu.ini  appmenu.pro  appmenu.qrc
c++/qpan-applets/clock/: clock.cpp  clock.h  clock.ini  clock.pro  clock.qrc
c++/qpan-applets/weather/: weather.cpp  weather.h  weather.ini  weather.pro  weather.qrc
c++/qpan/panel/: main.cpp  (+12 more)
javascript-HTML-CSS/blog.js/: README.md  blog.js  blog_generator.js  db.json  example.html  index.html  style.css  tutorial.html
javascript-HTML-CSS/games/: README.md
javascript-HTML-CSS/printed-html-example/: README.md  example.html  index.html  printed.css  printed.js  structure.json  style.css
javascript-HTML-CSS/snake/: README.md  app.js  index.html  levels.js  manifest.webapp
(+12 files in other folders)
